# openpuppy

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  START_HERE.md  docker-compose.yml  pyproject.toml  summary.md
config/: agent_config.yaml
scripts/: backup_restore.py  run_agent.py  run_scheduler.py  setup_db.py
src/: __init__.py
src/agent/: __init__.py  executor.py  graph.py  nodes.py  state.py  supervisor.py
src/interfaces/: __init__.py  api.py  cli.py  telegram_bot.py
src/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
src/mcp/: __init__.py  adapter.py
src/memory/: __init__.py  episodic.py  manager.py  schemas.sql  vector_store.py
src/scheduler/: __init__.py  runner.py
src/tools/: __init__.py  base.py  calculator.py  code_executor.py  compose.py  custom_tools.py  file_operations.py  memory_tools.py  plugins.py  registry.py  weather.py  web_search.py  wikipedia.py
src/utils/: __init__.py  config.py  llm_factory.py  logging.py  monitoring.py  prompts_ab.py  rate_limit.py
static/: admin.html  index.html
tests/: __init__.py
tests/unit/: test_tools.py
